--- a/css/partials/_portfolio.scss
+++ b/css/partials/_portfolio.scss
@@ -43,21 +43,13 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background: rgba(143, 16, 16, 0.8);
-                color: #ffffff;
+                background: $overlay-red;
+                // background: rgba(0, 0, 0, 0.55);
+                color: white;
                 opacity: 0;
                 transition: opacity 0.55s;
+                backdrop-filter: blur(4px);
             }
-            
-            .overlay-blur {
-                backdrop-filter: blur(5px);
-            }
-            
-             
-            .cell-overlay > * {
-                transform: translateY(0px);
-                transition: transform 0.25s;
-            } 
             
              .overlay:hover { 
                 opacity: 1;
@@ -65,29 +57,30 @@
             
             
             .overlay-title {
-                font-size: 2rem;
-                font-weight: bold;
+                font-size: 1.5em;
+                // font-weight: bold;
             }
             
             .preview {
-                font-size: 2rem;
+                font-size: 1.5rem;
                 border-radius: 10px;
-                padding: 15px 40px;
+                padding: 2% 6%;
                 position: absolute;
-                bottom: 40px;
-                /* border: 2px solid red; */
+                bottom: 8%;
                 background: rgb(37, 171, 255);    
-            }
-            
-            .preview:hover {
-                color: white;
-                background: red;
-                box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.68);
-                cursor: pointer;
+                // background: white;
+
+                &:hover {
+                    color: white;
+                    background: red;
+                    box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.68);
+                    cursor: pointer;
+                }
             }
         }
     }
 }
+
 
 .togglecontainer {
     padding: 20px;
@@ -111,6 +104,7 @@
         @include flex;
         flex-direction: column;
         justify-content: center;
+        flex-wrap: wrap;
         align-items: center;
         width: 100%;
         padding-top: 40px;
@@ -129,7 +123,7 @@
 
             @include laptop {
                 width: 100%;
-                height: 50%;
+                height: auto;
                 padding-left: 20px; 
 
                 h4 {
@@ -139,7 +133,7 @@
             }
 
             @include desktop {
-                width: 75;
+                width: 75%;
                 height: auto;
             }
         }
@@ -216,6 +210,10 @@
                 grid-template-columns: repeat(4, 1fr);
             }
         }
+    }
+    #box1 {
+        order: 1;
+
     }
 }
 
